[gd_scene load_steps=8 format=2]

[ext_resource path="res://Graphics/Fonts/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/FPS_counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MainMenu/SelectLevel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Canvas"]
margin_top = 1.0
margin_right = 384.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "The Magic of Monter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="Canvas"]
margin_right = 384.0
margin_bottom = 216.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="CenterContainer" parent="Canvas/Menu"]
anchor_left = -0.074
anchor_top = -0.281
anchor_right = -0.074
anchor_bottom = -0.281
margin_left = 28.416
margin_top = 60.696
margin_right = 412.416
margin_bottom = 276.696
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Canvas/Menu/Margin"]
margin_left = 117.0
margin_top = 72.0
margin_right = 266.0
margin_bottom = 144.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="PlayButton" type="Button" parent="Canvas/Menu/Margin/Grid"]
margin_right = 83.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 10 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="ShopButton" type="Button" parent="Canvas/Menu/Margin/Grid"]
margin_left = 93.0
margin_right = 149.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 10 )
custom_fonts/font = SubResource( 2 )
text = "Shop"

[node name="OptionsButton" type="Button" parent="Canvas/Menu/Margin/Grid"]
margin_top = 41.0
margin_right = 83.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 10 )
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitButton" type="Button" parent="Canvas/Menu/Margin/Grid"]
margin_left = 93.0
margin_top = 41.0
margin_right = 149.0
margin_bottom = 72.0
rect_min_size = Vector2( 50, 10 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="SelectLevel" type="Control" parent="Canvas"]
visible = false
margin_right = 384.0
margin_bottom = 216.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Canvas/SelectLevel"]
anchor_left = 0.189
anchor_top = 0.215
anchor_right = 0.811
anchor_bottom = 0.801
margin_left = 0.619995
margin_top = 1.3
margin_right = -0.620117
margin_bottom = 1.41992
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="Button" parent="Canvas/SelectLevel/Panel"]
margin_left = 228.102
margin_top = -9.32969
margin_right = 245.102
margin_bottom = 7.67031
custom_fonts/font = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Canvas/SelectLevel/Panel"]
margin_left = 6.0
margin_top = 19.0
margin_right = 230.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Canvas/SelectLevel/Panel/Scroll"]

[node name="Grid" type="GridContainer" parent="Canvas/SelectLevel/Panel/Scroll/VBox"]
custom_constants/vseparation = 227

[node name="FPS_counter" parent="Canvas" instance=ExtResource( 4 )]

[connection signal="pressed" from="Canvas/Menu/Margin/Grid/PlayButton" to="Canvas/Menu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Canvas/Menu/Margin/Grid/ShopButton" to="Canvas/Menu" method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Canvas/Menu/Margin/Grid/OptionsButton" to="Canvas/Menu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Canvas/Menu/Margin/Grid/QuitButton" to="Canvas/Menu" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Canvas/SelectLevel/Panel/Exit" to="Canvas/SelectLevel" method="_on_Exit_pressed"]
